fixed bug with image where it was expanding on smaller screens

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -19,7 +19,7 @@ body {
 /* MAIN CONTAINER  */
 .main-logged-out {
   margin-top: 2rem;
-  width: 100vw;
+  width: 100%;
   height: 500px;
   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
     url(../assets/1.png);
@@ -141,7 +141,7 @@ footer {
 /* MEDIA */
 @media only screen and (max-width: 900px) {
   .main-logged-out {
-    width: 100vw;
+    width: 100%;
     height: 300px;
     background-position-y: 50%;
   }
